--- a/CPEvent/src/index.css
+++ b/CPEvent/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Poppins:wght@300&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
