--- a/CPEvent/src/App.css
+++ b/CPEvent/src/App.css
@@ -1,10 +1,10 @@
-#root {
+/* #root {
   width: 100%;
   height: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 
 .logo {
   height: 6em;
