--- a/CPEvent/src/index.css
+++ b/CPEvent/src/index.css
@@ -3,3 +3,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {    
+    margin: 0 !important;
+    padding: 0 !important;
+}
