--- a/CPEvent/src/index.css
+++ b/CPEvent/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Poppins:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap');
 
 @tailwind base;
 @tailwind components;
